--- a/frontend/style/components.less
+++ b/frontend/style/components.less
@@ -34,7 +34,6 @@
 
         justify-content: center;
         align-content: center;
-        height: 100%;
     }
 }
 
