--- a/frontend/style/flex.less
+++ b/frontend/style/flex.less
@@ -8,6 +8,7 @@
 .flex-container-col() {
     display: flex;
     flex-flow: column nowrap;
+    height: 100%;
 }
 
 .flex-container-row() {
@@ -25,4 +26,8 @@
 
 .flex-grow() {
     flex-grow: 1;
+}
+
+.flex-shrink() {
+    flex-shrink: 1;
 }
